--- a/deploy/index.html
+++ b/deploy/index.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Starting Template</title>
+    <title>SMEG</title>
 </head>
 
 <body>
-    <script src="js/scripts-min.js"></script>
+
+   <h1>Header</h1>
+   <h1>Hero</h1>
+   <h1>Selection</h1>
+   <h1>Reviews</h1>
+   <h1>More</h1>
+   <h1>Buy Now</h1>
+   <h1>Footer</h1>
     
 </body>
 
