--- a/deploy/index.html
+++ b/deploy/index.html
@@ -15,6 +15,10 @@
 
    <h1>Header</h1>
    <h1>Hero</h1>
+      
+      <button>
+          <p>view all</p>
+      </button>
    <h1>Selection</h1>
    <h1>Reviews</h1>
    <h1>More</h1>
