In Class May 25

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -13,7 +13,35 @@
 
 <body>
 
-   <h1>Header</h1>
+   <header>
+       
+       <aside id="logo-container">
+           <a href="/"></a>
+           <img src="img/Logo_Icon.png">
+           <img id="logo-text" src="img/Logo_Text.png">
+       </aside>
+   
+       <section id="burger-container">
+           <div id="burgerBtn"><span></span></div>
+       </section>
+   
+       <nav id="main-menu">
+           <ul>
+               <li><a href="#">Products</a></li>
+               <li><a href="#">Reviews</a></li>
+               <li><a href="#">Aesthetic Lines</a></li>
+           </ul>
+           <input type="text" placeholder="Search">
+       </nav>
+   
+       <section id="cart-container">
+           <div id="cart-button">
+               <a href="/"></a>
+           <img src="img/Cart_Icon.png">
+           </div>
+       </section>
+   
+   </header>
    <section id="hero">
       
       <div>
