--- a/deploy/index.html
+++ b/deploy/index.html
@@ -22,7 +22,11 @@
        </aside>
    
        <section id="burger-container">
-           <div id="burgerBtn"><span></span></div>
+           <div id="burgerBtn"> 
+               <div></div>
+               <div></div>
+               <div></div>
+           </div>
        </section>
    
        <nav id="main-menu">
