In-Class June 1

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -32,8 +32,8 @@
        <nav id="main-menu">
            <ul>
                <li><a href="#">Products</a></li>
-               <li><a href="#">Reviews</a></li>
-               <li><a href="#">Aesthetic Lines</a></li>
+               <li><a href="#reviews">Reviews</a></li>
+               <li><a href="#more">Aesthetic Lines</a></li>
            </ul>
            <input type="text" placeholder="Search">
        </nav>
@@ -189,11 +189,13 @@
                       <p>Size</p>
                       <h2>4 Slice</h2>
                       <h2>Ready to Purchase</h2>
-                      <a href="#">Buy Now</a>
+                      <a href="/deploy/checkout.html">Buy Now</a>
                       <a href="#">Edit Selection</a>
                       <img src="img/product/toaster_1.png" alt="3/4 view toaster">
                   </section>
    <h1>Footer</h1>
+
+   <script src="js/scripts-min.js"></script>
     
 </body>
 
