--- a/deploy/index.html
+++ b/deploy/index.html
@@ -198,7 +198,7 @@
                           <p>Size</p>
                           <h2>4 Slice</h2>
                       </div>
-                      <h2>Ready to Purchase</h2>
+                      <h2>Ready to Purchase?</h2>
                       <div>
                           <a href="/deploy/checkout.html">Buy Now</a>
                           <a href="#">Edit Selection</a>
