--- a/deploy/thankyou.html
+++ b/deploy/thankyou.html
@@ -47,7 +47,22 @@
    
    </header>
    <h1>thank you</h1>
-   <h1>Footer</h1>
+   <img src="img/social_icons.png" alt="social media icons">
+         <div>
+             <h1>Subscribe to our Newsletter</h1>
+             <h2>Sign up to recieve updates aout SMEG products</h2>
+             <input type="text" placeholder="email">
+             <a href="#">subscribe</a>
+         </div>
+         <div>
+             <a href="#">Privacy Policy</a>
+             <a href="#">Security</a>
+         </div>
+         
+         <div>
+             <p>Copyright © 2023 SMEG | All Rights Reserved</p>
+             <a href="#">Webpage Designed by Olivia Lord</a>
+         </div>
 
    <script src="js/scripts-min.js"></script>
     
