--- a/deploy/checkout.html
+++ b/deploy/checkout.html
@@ -53,7 +53,8 @@
          	<input type=“text” name=“address” placeholder=“Address”>
          </form>
          <a href="/deploy/thankyou.html">Buy Now</a>
-   <img src="img/social_icons.png" alt="social media icons">
+   <footer>
+            <img src="img/social_icons.png" alt="social media icons">
             <div>
                 <h1>Subscribe to our Newsletter</h1>
                 <h2>Sign up to recieve updates aout SMEG products</h2>
@@ -69,6 +70,7 @@
                 <p>Copyright © 2023 SMEG | All Rights Reserved</p>
                 <a href="#">Webpage Designed by Olivia Lord</a>
             </div>
+            </footer>
 
    <script src="js/scripts-min.js"></script>
     
