--- a/deploy/thankyou.html
+++ b/deploy/thankyou.html
@@ -47,7 +47,8 @@
    
    </header>
    <h1>thank you</h1>
-   <img src="img/social_icons.png" alt="social media icons">
+   <footer>
+         <img src="img/social_icons.png" alt="social media icons">
          <div>
              <h1>Subscribe to our Newsletter</h1>
              <h2>Sign up to recieve updates aout SMEG products</h2>
@@ -63,6 +64,7 @@
              <p>Copyright © 2023 SMEG | All Rights Reserved</p>
              <a href="#">Webpage Designed by Olivia Lord</a>
          </div>
+         </footer>
 
    <script src="js/scripts-min.js"></script>
     
