--- a/deploy/checkout.html
+++ b/deploy/checkout.html
@@ -59,7 +59,7 @@
                 <h1>Subscribe to our Newsletter</h1>
                 <h2>Sign up to recieve updates aout SMEG products</h2>
                 <input type="text" placeholder="email">
-                <a href="#">subscribe</a>
+                <a id="subscribe" href="#">subscribe</a>
             </div>
             <div>
                 <a href="#">Privacy Policy</a>
