--- a/deploy/index.html
+++ b/deploy/index.html
@@ -193,20 +193,21 @@
                   
                </section>
    <section id="buynow">
-                      <img id="bigimage" src="img/product/toaster_1.png" alt="3/4 view toaster">
-                      <h2>Retro-Style Toaster</h2>
-                      <div>
-                          <p>Color:</p>
-                          <img src="img/product/color_selection.png" alt="3/4 view toaster">
-                      </div>
-                      <div>
-                          <p>Size:</p>
-                          <h2 id="four">4 Slice</h2>
-                      </div>
-                      <h2>Ready to Purchase?</h2>
-                      <div>
-                          <a href="/deploy/checkout.html">Buy Now</a>
-                          <a id="gray" href="#">Edit Selection</a>
+                      <div id="info">
+                          <h2>Retro-Style Toaster</h2>
+                          <div id="color">
+                              <p>Color:</p>
+                              <img src="img/product/color_selection.png" alt="3/4 view toaster">
+                          </div>
+                          <div id="size">
+                              <p>Size:</p>
+                              <h2 id="four">4 Slice</h2>
+                          </div>
+                          <h2>Ready to Purchase?</h2>
+                          <div id="buttons">
+                              <a href="/deploy/checkout.html">Buy Now</a>
+                              <a id="gray" href="#">Edit Selection</a>
+                          </div>
                       </div>
                   </section>
    <footer>
@@ -215,7 +216,7 @@
                          <h1>Subscribe to our Newsletter</h1>
                          <h2>Sign up to recieve updates aout SMEG products</h2>
                          <input type="text" placeholder="email">
-                         <a href="#">subscribe</a>
+                         <a id="subscribe" href="#">subscribe</a>
                      </div>
                      <div>
                          <a href="#">Privacy Policy</a>
