--- a/deploy/checkout.html
+++ b/deploy/checkout.html
@@ -46,7 +46,17 @@
        </section>
    
    </header>
-   <h1>cart</h1>
+   <section id="buynow">
+          <div id="info">
+              <h2>Retro-Style Toaster</h2>
+              <div id="color">
+                  <p>Color:</p>
+                  <img src="img/product/color_selection.png" alt="3/4 view toaster">
+              </div>
+              <div id="size">
+                  <p>Size:</p>
+                  <h2 id="four">4 Slice</h2>
+              </div>
    <h1>form</h1>
          <form action=“”>
          	<label for=“address”><l/label>
