--- a/deploy/checkout.html
+++ b/deploy/checkout.html
@@ -46,7 +46,8 @@
        </section>
    
    </header>
-   <section id="buynow">
+   <section id="cart">
+          <img src="img/product/Toaster_1.png">
           <div id="info">
               <h2>Retro-Style Toaster</h2>
               <div id="color">
@@ -57,12 +58,24 @@
                   <p>Size:</p>
                   <h2 id="four">4 Slice</h2>
               </div>
-   <h1>form</h1>
+      </div>
+      </section>
+      <div id="items">
+          <img src="img/product/more_1.png" alt="blender">
+          <img src="img/product/more_2.png" alt="stand mixer">
+          <img src="img/product/more_3.png" alt="kettle">
+          <img src="img/product/more_4.png" alt="coffee maker">
+          <div>
+              <a href="#">view all</a>
+          </div>
+      </div>
+   <section id="form">
          <form action=“”>
          	<label for=“address”><l/label>
          	<input type=“text” name=“address” placeholder=“Address”>
          </form>
          <a href="/deploy/thankyou.html">Buy Now</a>
+         </section>
    <footer>
             <img src="img/social_icons.png" alt="social media icons">
             <div>
