--- a/deploy/index.html
+++ b/deploy/index.html
@@ -185,10 +185,9 @@
                        <img src="img/product/more_2.png" alt="stand mixer">
                        <img src="img/product/more_3.png" alt="kettle">
                        <img src="img/product/more_4.png" alt="coffee maker">
-                   </div>
-               
-                   <div class="center">
-                       <a href="#">view all</a>
+                       <div>
+                           <a href="#">view all</a>
+                       </div>
                    </div>
                   
                </section>
