--- a/deploy/checkout.html
+++ b/deploy/checkout.html
@@ -70,11 +70,64 @@
           </div>
       </div>
    <section id="form">
-         <form action=“”>
-         	<label for=“address”><l/label>
-         	<input type=“text” name=“address” placeholder=“Address”>
-         </form>
-         <a href="/deploy/thankyou.html">Buy Now</a>
+         	<section id="cardinfo">
+         		<form action=“”>
+         			<label for="text"><label>
+         			<input type=“text” name=“cardnumber” placeholder="card number">
+         		</form>
+         		<div>
+         			<form action=“”>
+         				<label for="text"><label>
+         				<input type=“text” name=“securitycode” placeholder="security code">
+         			</form>
+         			<form action=“”>
+         				<label for="text"><label>
+         				<input type=“text” name=“expirationdate” placeholder="expiration date">
+         			</form>
+         		</div>
+         		<form action=“”>
+         			<label for="text"><label>
+         			<input type=“text” name=“nameoncard” placeholder="name on card">
+         		</form>
+         	</section>
+         	<section id="shipinfo">
+         		<h1>Shipping Information</h1>
+         		<div>
+         			<form action=“”>
+         				<label for="text"><label>
+         				<input type=“text” name=“firstname” placeholder="first name">
+         			</form>
+         			<form action=“”>
+         				<label for="text"><label>
+         				<input type=“text” name=“lastname” placeholder="last name">
+         			</form>
+         			<form action=“”>
+         				<label for="text"><label>
+         				<input type=“text” name=“lastname” placeholder="last name">
+         		</div>
+         		<form action=“”>
+         			<label for="text"><label>
+         			<input type=“text” name=“address” placeholder="address">
+         		</form>
+         		<div>
+         			<form action=“”>
+         				<label for="text"><label>
+         				<input type=“text” name=“state” placeholder="state">
+         			</form>
+         			<form action=“”>
+         				<label for="text"><label>
+         				<input type=“text” name=“zipcode” placeholder="zip code">
+         			</form>
+         			<form action=“”>
+         				<label for="text"><label>
+         				<input type=“text” name=“lastname” placeholder="last name">
+         		</div>
+         		<form action=“”>
+         			<label for="text"><label>
+         			<input type=“text” name=“email” placeholder="email">
+         		</form>
+         	</section>
+         	<a href="/deploy/thankyou.html">Buy Now</a>
          </section>
    <footer>
             <img src="img/social_icons.png" alt="social media icons">
