--- a/deploy/index.html
+++ b/deploy/index.html
@@ -178,7 +178,7 @@
                 </div>
             </section>
    <section id="more">
-                   <img src="img/product/kitchen_2.png" alt="gray SMEG Products">
+                   <img id="bigphoto" src="img/product/kitchen_2.png" alt="gray SMEG Products">
                
                    <div id="items">
                        <img src="img/product/more_1.png" alt="blender">
